# pressure-takeover-agent

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  render-langchain.yaml  render.yaml  随行压力接管Agent_六周Demo汇报材料_v2_回应评审意见.docx  随行压力接管Agent_六周Demo汇报材料_v4_生活服务执行增强版.docx  随行压力接管Agent_开发功能清单_v1_五人分工版.docx
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-feature.yml  contract-change.yml
.github/workflows/: agent-api.yml
apps/demo-console/: README.md  TEAM_GUIDE.md  app.js  index.html  styles.css
apps/mobile/: CLAUDE.md  DEV-GUIDE.md  FEATURE-LIST.md  ISSUES.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  setup-sherpa.sh
apps/vehicle-hmi/: README.md  TEAM_GUIDE.md  app.js  index.html  styles.css
contracts/: README.md  event.schema.json  openapi.yaml  tool-calling-spec.md  world-state.schema.json
docs/: agent-backlog.md  agent-integration-guide.md  architecture.md  demo-scope.md  mobile-bugfix-log.md  workstreams.md
scripts/: configure-shared-firewall.ps1  run-agent.ps1  setup-agent.ps1  smoke-langchain-agent.py  test-agent.ps1
services/agent-api/: README.md  pyproject.toml
services/agent-api/prompts/: README.md  in_car_briefing_v1.md  message_draft_v1.md  order_preference_v1.md  task_parser_v1.md  test_cases.md
services/agent-api/src/auri_agent/: __init__.py  __main__.py  agent.py  app.py  chat.py  config.py  engine.py  llm.py  models.py  prompts.py  runtime.py  tools.py
services/agent-api/tests/: test_agent_tools.py  test_api.py
(+96 files in other folders)
