[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "auri-agent-api"
version = "0.2.0"
description = "Deterministic pressure-takeover agent API for the AURI demo"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "openai>=1.50,<3",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "uvicorn[standard]>=0.30,<1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "jsonschema>=4.23,<5",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1"
]

[tool.hatch.build.targets.wheel]
packages = ["src/auri_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
